大数据平台：新增一个kafka消息生产者，两个消息消费者

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
         <module>TC-cloud-gateway-8080</module>
         <module>TC-cloud-security-8001</module>
         <module>TC-cloud-service01-8002</module>
-        <module>TC-cloud-getdata-8003</module>
+        <module>TC-cloud-kafka-provider-8003</module>
+        <module>TC-cloud-kafka-consumer01-8004</module>
+        <module>TC-cloud-kafka-consumer02-8005</module>
     </modules>
 
 
