--- a/TC-cloud-security-8001/pom.xml
+++ b/TC-cloud-security-8001/pom.xml
@@ -12,10 +12,17 @@
     <artifactId>TC-cloud-security-8001</artifactId>
 
     <dependencies>
+<!--        nacao服务注册发现-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
+<!--        接口限流降级熔断-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-sentinel</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
