--- a/TC-cloud-system-setting-8006/src/main/resources/application-dev.yml
+++ b/TC-cloud-system-setting-8006/src/main/resources/application-dev.yml
@@ -19,6 +19,18 @@ spring:
   application:
     name: tcsoft-data-platform-system-setting
 
+  redis:
+    host: 106.14.77.81
+    port: 6379
+    password: TCsoft123..
+    database: 0
+    lettuce:
+      pool:
+        max-active: 32
+        max-wait: 300ms
+        max-idle: 16
+        min-idle: 8
+
   datasource:
     username: root
     password: TCsoft123..
