--- a/TC-cloud-system-setting-8006/pom.xml
+++ b/TC-cloud-system-setting-8006/pom.xml
@@ -36,6 +36,16 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.10</version>
         </dependency>
+<!--        redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
