--- a/TC-cloud-gateway-8888/pom.xml
+++ b/TC-cloud-gateway-8888/pom.xml
@@ -21,6 +21,17 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
+        <!--        redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.3</version>
+        </dependency>
+
         <!--gateway无需web和actuator-->
         <dependency>
             <groupId>org.projectlombok</groupId>
