--- a/TC-cloud-system-setting-8006/pom.xml
+++ b/TC-cloud-system-setting-8006/pom.xml
@@ -46,7 +46,11 @@
             <artifactId>jedis</artifactId>
             <version>2.9.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
