--- a/TC-cloud-system-setting-8006/src/main/resources/application-dev.yml
+++ b/TC-cloud-system-setting-8006/src/main/resources/application-dev.yml
@@ -11,7 +11,7 @@ mybatis-plus:
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
 
   configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: false   # 关闭驼峰命名
 
 # JWT 参数配置
