--- a/TC-cloud-security-8001/src/main/resources/application-dev.yml
+++ b/TC-cloud-security-8001/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ mybatis-plus:
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
   configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: false   # 关闭驼峰命名
 
 
